--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -11,7 +11,7 @@
 
     "label.home.about.hello": "Hola, <span class='shiny-title'>soy Ricardo</span>",
     "label.home.about.developer": "Desarrollador web",
-    "label.home.about.resume": "Currículo",
+    "label.home.about.resume": "Curriculum",
     "label.home.about.presentation": "¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la programación y de la tecnología. Con una formación en <span class='shiny-text'>desarrollo de aplicaciones web</span>, actualmente me encuentro en un emocionante viaje de aprendizaje para especializarme como <span class='shiny-text'>desarrollador backend</span> y para explorar nuevas oportunidades en la industria del desarrollo de software.",
     "label.home.tech.title": "Tecnologías",
     "label.home.projects.title": "Proyectos",
