--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
-  "label.social.email.title": "Email - Enviar un email a ricardohuaripatabellido@gmail.com",
-  "label.social.linkedin.title": "LinkedIn - Conéctate conmigo en LinkedIn",
+  "label.social.email.title": "Email - Enviar email a ricardohuaripatabellido@gmail.com",
+  "label.social.linkedin.title": "LinkedIn - Conecta conmigo en LinkedIn",
   "label.social.github.title": "GitHub - Visita mi perfil en GitHub",
   "label.social.github.project.title": "GitHub - Visitar repositorio en GitHub",
 
